<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>net.tenie</groupId>
  <artifactId>parent</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>pom</packaging>
 <modules>   
 	 <module>pojo</module>   
	 <module>web</module>   
	</modules>
	
	<properties>
		<spring.version>5.2.3.RELEASE</spring.version>
		<!-- <quartz.version>2.2.1</quartz.version> -->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>1.7</java.version>
        <cglib.version>2.2</cglib.version>
        <aspectj.version>1.6.9</aspectj.version>
        <org.springframework.version>4.2.0.RELEASE</org.springframework.version>
        <shiro.version>1.2.0</shiro.version>
        <!-- Logging -->
        <slf4j.version>1.7.12</slf4j.version>
        <logback.version>1.1.7</logback.version>
        <jackson.json.version>2.4.6</jackson.json.version>
        <quartz.version>2.2.1</quartz.version>
        <!-- Test -->
        <junit.version>4.11</junit.version>
        <okHttp.version>3.8.1</okHttp.version>
	</properties>
	 
        
	
	
	
	<!-- 直接在父POM中添加依赖-->
	<dependencies>
	
	
	<dependency>
	  <!-- jsoup HTML parser library @ https://jsoup.org/ -->
	  <groupId>org.jsoup</groupId>
	  <artifactId>jsoup</artifactId>
	  <version>1.10.3</version>
	  <scope>test</scope>
	</dependency>
	
	
	 <dependency>
        <groupId>org.apache.poi</groupId>
        <artifactId>poi</artifactId>
        <version>3.14</version>
      </dependency>
     
     <!-- 压缩算法库:lzo 解压.mdx文件 -->
     <dependency>
	    <groupId>org.anarres.lzo</groupId>
	    <artifactId>lzo-core</artifactId>
	    <version>1.0.0</version>
	</dependency>
     
		<!--  DB -->
	    <!-- <dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>druid</artifactId>
            <version>1.0.18</version>
            <exclusions>
                <exclusion>
                    <groupId>com.alibaba</groupId>
                    <artifactId>jconsole</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.alibaba</groupId>
                    <artifactId>tools</artifactId>
                </exclusion>
            </exclusions>
        </dependency> -->
        
     <!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
		<dependency>
		    <groupId>com.h2database</groupId>
		    <artifactId>h2</artifactId>
		    <version>1.4.197</version> 
		</dependency>
	 <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-lang3</artifactId>
        <version>3.4</version>
      </dependency>
	<!--   <dependency>
        <groupId>com.belerweb</groupId>
        <artifactId>pinyin4j</artifactId>
        <version>2.5.1</version>
      </dependency> -->
      	<!--  验证-->
	      <dependency>
	       <groupId>javax.validation</groupId>
		    <artifactId>validation-api</artifactId>
		    <version>1.1.0.Final</version>
	     </dependency>
	      <dependency>
	        <groupId>org.hibernate</groupId>
	        <artifactId>hibernate-validator</artifactId>
	        <version>5.2.4.Final</version>
	      </dependency>
      
	 	<dependency>
				<groupId>com.squareup.okhttp3</groupId>
				<artifactId>okhttp</artifactId>
				<version>${okHttp.version}</version>
				<scope>test</scope>
		</dependency>  
        <dependency>
		    <groupId>org.springframework</groupId>
		    <artifactId>spring-context-support</artifactId>
		    <version>${spring.version}</version>
		</dependency>
		
		
		
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-core</artifactId>
			<version>${spring.version}</version>
			<scope></scope>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-web</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
	        <groupId>org.springframework</groupId>
	        <artifactId>spring-websocket</artifactId>
	        <version>${spring.version}</version>
    	</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-webmvc</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-orm</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-jdbc</artifactId>
			<version>${spring.version}</version>
		</dependency>
		 <dependency>
	     <groupId>org.springframework.data</groupId>
	        <artifactId>spring-data-jpa</artifactId>
	        <version>1.11.23.RELEASE</version>
	    </dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-aop</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.aspectj</groupId>
			<artifactId>aspectjweaver</artifactId>
			<version>1.8.6</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-oxm</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-tx</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.springframework/spring-messaging -->
		<dependency>
		    <groupId>org.springframework</groupId>
		    <artifactId>spring-messaging</artifactId>
		    <version>4.3.8.RELEASE</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/javax.websocket/javax.websocket-all -->
		<!-- <dependency>
		    <groupId>javax.websocket</groupId>
		    <artifactId>javax.websocket-all</artifactId>
		    <version>1.1</version>
		</dependency> -->
		
		<!-- https://mvnrepository.com/artifact/javax.websocket/javax.websocket-api -->
		<dependency>
		    <groupId>javax.websocket</groupId>
		    <artifactId>javax.websocket-api</artifactId>
		    <version>1.1</version>
		</dependency>
		<!-- slf4j -->
		<!-- <dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.7.19</version>
		</dependency> -->
		
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
   			 <version>1.7.25</version>
		</dependency>
		
		<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-core</artifactId>
				<version>1.1.7</version>
			</dependency>
			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-classic</artifactId>
				<version>1.1.7</version>
	    </dependency>
		
		
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
			<version>2.1.0</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.1.0</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-annotations</artifactId>
			<version>2.1.0</version>
		</dependency>

		<!-- <dependency>
			<groupId>com.thoughtworks.xstream</groupId>
			<artifactId>xstream</artifactId>
			<version>1.4.4</version>
		</dependency> -->

		 
		<dependency>
			<groupId>commons-fileupload</groupId>
			<artifactId>commons-fileupload</artifactId>
			<version>1.3.2</version>
		</dependency>
		<!-- <dependency>
			<groupId>net.sf.ehcache</groupId>
			<artifactId>ehcache-core</artifactId>
			<version>2.4.7</version>
		</dependency>
		<dependency>
			<groupId>org.ehcache</groupId>
			<artifactId>ehcache</artifactId>
			<version>3.0.0.m4</version>
		</dependency> -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>

 
		<!-- <dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
		</dependency> -->
		 
		 
		<!-- acl begin -->
		  
		<!-- acl end -->
		<!-- REDIS cache related -->
		<dependency>
			<groupId>org.springframework.data</groupId>
			<artifactId>spring-data-redis</artifactId>
			<version>1.7.2.RELEASE</version>
		</dependency>
		 
		<!-- REDIS CONFIG END -->
		<dependency>
			<groupId>com.mchange</groupId>
			<artifactId>c3p0</artifactId>
			<version>0.9.5.4</version>
		</dependency>

		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>servlet-api</artifactId>
			<version>2.5</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.quartz-scheduler</groupId>
			<artifactId>quartz</artifactId>
			<version>${quartz.version}</version>
		</dependency>
		<dependency>
			<groupId>org.quartz-scheduler</groupId>
			<artifactId>quartz-jobs</artifactId>
			<version>${quartz.version}</version>
		</dependency>
		<!-- <dependency>
	        <groupId>mysql</groupId>
	        <artifactId>mysql-connector-java</artifactId>
	        <version>5.1.35</version>
	      </dependency> -->
	       <dependency>
		      <groupId>mysql</groupId>
		      <artifactId>mysql-connector-java</artifactId>
		      <version>5.1.35</version>
		      <scope>compile</scope>
		    </dependency>
		
	 
	
	  <!-- 从bbs中copy的依赖 -->
		<!--redis插件依赖lib-->
        <dependency>
            <groupId>redis.clients</groupId>
            <artifactId>jedis</artifactId>
            <version>2.8.1</version>
        </dependency>
        <!--markdown转换lib-->
       <!--  <dependency>
            <groupId>org.pegdown</groupId>
            <artifactId>pegdown</artifactId>
            <version>1.6.0</version>
        </dependency> -->

        <!--XPath-->
        <dependency>
            <groupId>dom4j</groupId>
            <artifactId>dom4j</artifactId>
            <version>1.6.1</version>
        </dependency>
        <!-- <dependency>
            <groupId>jaxen</groupId>
            <artifactId>jaxen</artifactId>
            <version>1.1.6</version>
        </dependency> -->
      <!--   <dependency>
            <groupId>org.jsoup</groupId>
            <artifactId>jsoup</artifactId>
            <version>1.9.2</version>
        </dependency> -->

        <!--access oauth2.0-->
      <!--   <dependency>
            <groupId>com.github.scribejava</groupId>
            <artifactId>scribejava-apis</artifactId>
            <version>3.2.0</version>
        </dependency> -->

        <!--pretty-time-->
      <!--   <dependency>
            <groupId>org.ocpsoft.prettytime</groupId>
            <artifactId>prettytime</artifactId>
            <version>4.0.1.Final</version>
        </dependency> -->

        <!--solr-->
       <!--  <dependency>
            <groupId>org.apache.solr</groupId>
            <artifactId>solr-solrj</artifactId>
            <version>6.0.1</version>
        </dependency> -->

        <!-- springfox-swagger2 -->
        <!-- <dependency>
            <groupId>io.springfox</groupId>
            <artifactId>springfox-swagger2</artifactId>
            <version>2.6.0</version>
        </dependency> -->
        
         <!-- FreeMaker  -->
        <dependency>
            <groupId>org.freemarker</groupId>
            <artifactId>freemarker</artifactId>
            <version>2.3.23</version>
        </dependency>
        
        <!-- https://mvnrepository.com/artifact/commons-dbcp/commons-dbcp -->
        <!--  数据库链接池-->
	<dependency>
	    <groupId>commons-dbcp</groupId>
	    <artifactId>commons-dbcp</artifactId>
	    <version>1.4</version>
	</dependency>
	
	<!-- https://mvnrepository.com/artifact/javax.mail/javax.mail-api -->
	<!--  java mail-->
	<dependency>
	    <groupId>javax.mail</groupId>
	    <artifactId>javax.mail-api</artifactId>
	    <version>1.5.5</version>
	</dependency>
		<!-- https://mvnrepository.com/artifact/com.sun.mail/javax.mail -->
	<!-- <dependency> -->
	    <!-- <groupId>com.sun.mail</groupId> -->
	    <!-- <artifactId>javax.mail</artifactId> -->
	    <!-- <version>1.5.6</version> -->
	<!-- </dependency> -->
    <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-email</artifactId>
        <version>1.4</version>
    </dependency>
    
    <dependency>
	    <groupId>org.javalite</groupId>
	    <artifactId>activejdbc</artifactId>
	    <version>1.4.13</version>
	</dependency>
	 
	
      
	</dependencies>
	
	
	<build> 
		<!-- <testResources>
				<testResource>
					<directory>src/main/resources</directory>
					<filtering>true</filtering>
				</testResource>
		</testResources> -->
		<testResources>
				<testResource>
					<directory>src/test/resources</directory>
					<filtering>true</filtering>
				</testResource>
		</testResources> 
	<!-- 把对于的资源文件打进包中 -->  
	    <resources>
            <resource>
                <directory>src/main/resources</directory>
                <excludes>
                    <exclude>**/*.xml</exclude>
                    <exclude>**/*.properties</exclude>
                </excludes>
            </resource>
        </resources>
        <pluginManagement>
	    <plugins>
	        <!-- 设置使用多少的jdk编译, 不设置会以1.5的来编译,坑爹 -->  
	        <plugin>  
	            <groupId>org.apache.maven.plugins</groupId>  
	            <artifactId>maven-compiler-plugin</artifactId>  
	            <version>2.3.2</version>  
	            <configuration>  
	                <source>1.8</source>  
	                <target>1.8</target>  
	            </configuration>  
	        </plugin>  
	        
	        <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.9</version>
                <configuration>
                    <argLine>-Xms256m -Xmx256m -XX:PermSize=256M -XX:MaxPermSize=256M</argLine>
                    <testFailureIgnore>true</testFailureIgnore>
                    <forkMode>always</forkMode>
                    <parallel>methods</parallel>
                    <threadCount>4</threadCount>
                </configuration>
            </plugin>
            
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>2.4</version>
                <configuration>
                    <webResources>
                        <resource>
                            <directory>src/main/resources</directory>
                            <targetPath>WEB-INF/classes</targetPath>
                        </resource>
                    </webResources>
                    <archiveClasses>true</archiveClasses>
                </configuration>
            </plugin>
            
      		 <plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					 <version>3.0.0</version>
					<configuration>
						<encoding>UTF-8</encoding>
					</configuration>
			</plugin>  
			
			
				
           <plugin>
                <groupId>org.javalite</groupId>
                <artifactId>activejdbc-instrumentation</artifactId>
                <version>1.4.13</version>
                <executions>
                    <execution>
                        <phase>process-classes</phase>
                        <goals>
                            <goal>instrument</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>    
            
           
				 <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.javalite</groupId>
										<artifactId>
											activejdbc-instrumentation
										</artifactId>
										<versionRange>
											[1.4.13,)
										</versionRange>
										<goals>
											<goal>instrument</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore></ignore>
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>  
	    </plugins>  
	</pluginManagement>
	</build>  
	
 <!--依赖仓库设置  -->
	<repositories>
        <repository>
            <id>aliyun maven</id>
            <name>aliyun maven</name>
            <url>http://maven.aliyun.com/nexus/content/groups/public</url>
        </repository>
        
        <!--  ActiveJDBC 依赖仓库-->
        <repository>
	        <id>javalite-snapshots</id>
	        <name>JavaLite Snapshots</name>
	        <url>http://repo.javalite.io/</url>
	        <releases>
	            <enabled>false</enabled>
	        </releases>
	        <snapshots>
	            <enabled>true</enabled>
	        </snapshots>
	    </repository>
    </repositories>
    <!--  插件仓库-->
<pluginRepositories>
    <pluginRepository>
        <id>javalite-plugin-snapshots</id>
        <name>JavaLite Plugin Snapshots</name>
        <url>http://repo.javalite.io/</url>
        <releases>
            <enabled>false</enabled>
        </releases>
        <snapshots>
            <enabled>true</enabled>
        </snapshots>
    </pluginRepository>
</pluginRepositories>
	
</project>